--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,5 @@ VITE_FIREBASE_PROJECT_ID=tu_project_id_desarrollo
 VITE_FIREBASE_STORAGE_BUCKET=tu_storage_bucket_desarrollo
 VITE_FIREBASE_MESSAGING_SENDER_ID=tu_messaging_sender_id_desarrollo
 VITE_FIREBASE_APP_ID=tu_app_id_desarrollo
+VITE_MEASUREMENT_ID=G-3333333333
 VITE_MODE=development 
