--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,27 @@
-# Dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Dependencias
+node_modules/
 
-# Environment variables
+# Archivos de construcción
+dist/
+.parcel-cache/
+build/
+
+# Archivos de entorno
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Build outputs
-/dist
-/build
+.env.*.local
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories
-.idea
-.vscode
+# Editor/IDE
+.vscode/
+.idea/
 *.swp
 *.swo
 
-# OS generated files
+# Sistema operativo
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
