fix: Actualiza configuración de Render y agrega Dockerfile

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ VITE_FIREBASE_STORAGE_BUCKET=your_firebase_storage_bucket
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
 VITE_FIREBASE_APP_ID=your_firebase_app_id 
 VITE_MEASUREMENT_ID=G-3333333333
+
+# Backend
+PORT=3000
+CORS_ORIGIN=https://sebagutierrezf.github.io
+API_KEY=tu_api_key
