--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Dependencias
 node_modules/
+**/node_modules/
 
 # Archivos de construcción
 dist/
@@ -16,7 +17,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor/IDE
+# Editor
 .vscode/
 .idea/
 *.swp
@@ -25,3 +26,8 @@ yarn-error.log*
 # Sistema operativo
 .DS_Store
 Thumbs.db
+
+# Lock files (mantener solo uno)
+yarn.lock
+package-lock.json
+!package-lock.json
