--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "number-home",
+  "name": "number-home-frontend",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "firebase": "^9.23.0",
-    "dotenv": "^16.4.5"
+    "leaflet": "^1.9.4"
   },
   "devDependencies": {
-    "buffer": "^6.0.3",
-    "parcel": "^2.13.0",
-    "process": "^0.11.10"
+    "vite": "^5.0.0"
   }
 }
+
