--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: numbers-home-api
     env: node
-    buildCommand: cd backend && npm install --production
-    startCommand: cd backend && node server.js
+    buildCommand: cd backend && npm install
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
@@ -11,4 +11,3 @@ services:
         value: https://sebagutierrezf.github.io
       - key: API_KEY
         fromSecret: true
-    nodeVersion: 18
