--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: numbers-home-api
     env: node
     buildCommand: cd backend && npm install
-    startCommand: npm start
+    startCommand: cd backend && node server.js
     envVars:
       - key: NODE_ENV
         value: production
