--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "number-home",
   "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "backend",
-    "docs"
-  ],
   "scripts": {
-    "start": "cd backend && npm start",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "cd backend && npm run dev",
-    "dev:frontend": "cd docs && npm run dev",
-    "build": "cd docs && npm run build",
-    "install:all": "npm install && npm run install:backend && npm run install:frontend",
-    "install:backend": "cd backend && npm install",
-    "install:frontend": "cd docs && npm install"
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js",
+    "build": "vite build docs",
+    "preview": "vite preview docs"
+  },
+  "dependencies": {
+    "axios": "^1.x.x",
+    "cors": "^2.x.x",
+    "dotenv": "^16.4.5",
+    "express": "^4.x.x",
+    "firebase": "^10.7.0",
+    "leaflet": "^1.9.4"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "nodemon": "^3.0.2",
+    "vite": "^5.0.0",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
 
