--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "preview": "vite preview docs"
   },
   "dependencies": {
-    "axios": "^1.x.x",
-    "cors": "^2.x.x",
-    "dotenv": "^16.4.5",
-    "express": "^4.x.x",
-    "firebase": "^10.7.0",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "firebase": "^10.7.1",
     "leaflet": "^1.9.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
-    "vite": "^5.0.0",
+    "vite": "^5.0.7",
     "buffer": "^6.0.3",
     "process": "^0.11.10"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   }
 }
 
