fix: Corrige configuración de build y deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,21 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Debug Directory
+        run: |
+          pwd
+          ls -la
+
       - name: Install Dependencies
-        run: npm install
+        run: |
+          npm install
+          cd docs
+          npm install vite
 
       - name: Build
         run: |
           cd docs
-          npm run build
+          npx vite build
         env:
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
@@ -36,8 +44,14 @@ jobs:
           VITE_MEASUREMENT_ID: ${{ secrets.VITE_MEASUREMENT_ID }}
           VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
 
+      - name: Debug Build Output
+        run: |
+          ls -la
+          ls -la dist || echo "dist directory not found in root"
+          ls -la docs/dist || echo "dist directory not found in docs"
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist
+          folder: docs/dist
           branch: gh-pages
