--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,24 @@ Thumbs.db
 yarn.lock
 package-lock.json
 !package-lock.json
+
+# Auto detect text files and perform LF normalization
+* text=auto
+
+# Específicamente para archivos de texto
+*.js text eol=lf
+*.jsx text eol=lf
+*.json text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.md text eol=lf
+*.html text eol=lf
+*.css text eol=lf
+*.lock text eol=lf
+
+# Binarios
+*.png binary
+*.jpg binary
+*.gif binary
+*.ico binary
+*.pdf binary
