--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js",
-    "build": "cd docs && vite build",
-    "preview": "cd docs && vite preview"
+    "dev:backend": "nodemon backend/server.js",
+    "dev:frontend": "cd docs && npm run dev",
+    "build": "cd docs && npm run build",
+    "preview": "cd docs && npm run preview",
+    "install:all": "npm install && cd backend && npm install && cd ../docs && npm install"
   },
   "dependencies": {
     "axios": "^1.x.x",
@@ -17,8 +19,7 @@
     "leaflet": "^1.9.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "vite": "^5.0.0"
+    "nodemon": "^3.0.2"
   }
 }
 
