--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "install:all": "npm install && cd backend && npm install && cd ../docs && npm install"
   },
   "dependencies": {
-    "axios": "^1.x.x",
-    "cors": "^2.x.x",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.x.x",
-    "firebase": "^10.7.0",
+    "express": "^4.21.1",
+    "firebase": "^10.14.1",
     "leaflet": "^1.9.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.7"
   }
 }
-
