--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,17 @@ jobs:
 
       - name: Generate env.js
         run: |
-          echo "window.env = {
-            VITE_FIREBASE_API_KEY: '${{ secrets.VITE_FIREBASE_API_KEY }}',
-            VITE_FIREBASE_AUTH_DOMAIN: '${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}',
-            VITE_FIREBASE_PROJECT_ID: '${{ secrets.VITE_FIREBASE_PROJECT_ID }}',
-            VITE_FIREBASE_STORAGE_BUCKET: '${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }}',
-            VITE_FIREBASE_MESSAGING_SENDER_ID: '${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}',
-            VITE_FIREBASE_APP_ID: '${{ secrets.VITE_FIREBASE_APP_ID }}',
-            VITE_MEASUREMENT_ID: '${{ secrets.VITE_MEASUREMENT_ID }}'
-          };" > docs/env.js
+          cat > docs/env.js << 'EOL'
+          window.env = {
+            VITE_FIREBASE_API_KEY: "${{ secrets.VITE_FIREBASE_API_KEY }}",
+            VITE_FIREBASE_AUTH_DOMAIN: "${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}",
+            VITE_FIREBASE_PROJECT_ID: "${{ secrets.VITE_FIREBASE_PROJECT_ID }}",
+            VITE_FIREBASE_STORAGE_BUCKET: "${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }}",
+            VITE_FIREBASE_MESSAGING_SENDER_ID: "${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}",
+            VITE_FIREBASE_APP_ID: "${{ secrets.VITE_FIREBASE_APP_ID }}",
+            VITE_MEASUREMENT_ID: "${{ secrets.VITE_MEASUREMENT_ID }}"
+          };
+          EOL
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
