--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
     "leaflet": "^1.9.4"
   },
