--- a/docs/package.json
+++ b/docs/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "number-home-frontend",
+  "name": "number-home",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/server.js",
+    "server:dev": "nodemon server/server.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "firebase": "^11.0.2",
     "leaflet": "^1.9.4"
   },
   "devDependencies": {
+    "nodemon": "^3.0.2",
     "vite": "^5.4.11"
   }
 }
