Problema en el firebase-config.js, try 2

--- a/docs/server/Dockerfile
+++ b/docs/server/Dockerfile
@@ -2,15 +2,15 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# Copiar package.json y package-lock.json
-COPY ../package*.json ./
+# Copiar package.json y package-lock.json desde la raíz
+COPY ../../package*.json ./
 
 # Instalar dependencias
 RUN npm install
 
 # Copiar el código del servidor
-COPY . ./server
+COPY . ./docs/server
 
 EXPOSE 3000
 
-CMD ["node", "server/server.js"]
+CMD ["npm", "start"]
