--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "number-home",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node backend/server.js",
-    "dev:backend": "nodemon backend/server.js",
-    "dev:frontend": "cd docs && npm run dev",
-    "build": "cd docs && npm run build",
-    "preview": "cd docs && npm run preview",
-    "install:all": "npm install && cd backend && npm install && cd ../docs && npm install"
+    "start": "node docs/server/server.js",
+    "dev:server": "nodemon docs/server/server.js",
+    "dev:client": "cd docs && vite",
+    "build": "cd docs && vite build",
+    "preview": "cd docs && vite preview"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -19,6 +19,7 @@
     "leaflet": "^1.9.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "vite": "^5.4.11"
   }
 }
