--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.0.0",
     "leaflet": "^1.9.4"
   },
   "devDependencies": {
