Problema en el firebase-config.js, try 15

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node docs/server/server.js",
-    "dev:server": "nodemon docs/server/server.js",
+    "start": "cd backend && npm start",
+    "dev:server": "cd backend && npm run dev",
     "dev:client": "cd docs && vite",
     "build": "cd docs && vite build",
     "preview": "cd docs && vite preview"
