Problema en el firebase-config.js, try 16

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,9 +1,7 @@
-VITE_API_KEY=tu_api_key_de_desarrollo
-VITE_FIREBASE_API_KEY=tu_firebase_api_key_desarrollo
-VITE_FIREBASE_AUTH_DOMAIN=tu_auth_domain_desarrollo
-VITE_FIREBASE_PROJECT_ID=tu_project_id_desarrollo
-VITE_FIREBASE_STORAGE_BUCKET=tu_storage_bucket_desarrollo
-VITE_FIREBASE_MESSAGING_SENDER_ID=tu_messaging_sender_id_desarrollo
-VITE_FIREBASE_APP_ID=tu_app_id_desarrollo
-VITE_MEASUREMENT_ID=G-3333333333
-VITE_MODE=development 
+VITE_FIREBASE_API_KEY=AIzaSyDFDboBtIOwhX6QYker19RlTPhDmEAakMY
+VITE_FIREBASE_AUTH_DOMAIN=numberhome-5ad7c.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=numberhome-5ad7c
+VITE_FIREBASE_STORAGE_BUCKET=numberhome-5ad7c.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=155611891211
+VITE_FIREBASE_APP_ID=1:155611891211:web:7bad7e2de46af2abb4290e
+VITE_MEASUREMENT_ID=G-MXXVWCLLBD
