--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,18 @@
 services:
+  # Backend Service
   - type: web
     name: numbers-home-api
     env: node
     region: ohio
-    buildCommand: cd backend && npm install
+    buildCommand: |
+      cd backend
+      npm install
+      cd ../frontend
+      npm install
+      npm run build
+      cd ..
     startCommand: cd backend && npm start
+    staticPublishPath: ./frontend/dist
     envVars:
       - key: NODE_VERSION
         value: 20.0.0
@@ -12,7 +20,19 @@ services:
         value: 3000
       - key: CORS_ORIGIN
         sync: false
-      - key: API_KEY
-        sync: false
       - key: FIREBASE_SERVICE_ACCOUNT
+        sync: false
+      - key: VITE_FIREBASE_API_KEY
+        sync: false
+      - key: VITE_FIREBASE_AUTH_DOMAIN
+        sync: false
+      - key: VITE_FIREBASE_PROJECT_ID
+        sync: false
+      - key: VITE_FIREBASE_STORAGE_BUCKET
+        sync: false
+      - key: VITE_FIREBASE_MESSAGING_SENDER_ID
+        sync: false
+      - key: VITE_FIREBASE_APP_ID
+        sync: false
+      - key: VITE_MEASUREMENT_ID
         sync: false
