--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -5,3 +5,4 @@ VITE_FIREBASE_STORAGE_BUCKET=numberhome-5ad7c.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=155611891211
 VITE_FIREBASE_APP_ID=1:155611891211:web:7bad7e2de46af2abb4290e
 VITE_MEASUREMENT_ID=G-MXXVWCLLBD
+VITE_API_URL=http://localhost:3000  # para desarrollo
