--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,4 @@ VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 VITE_FIREBASE_APP_ID=your_app_id_here
 VITE_MEASUREMENT_ID=your_measurement_id_here
+VITE_API_URL=http://localhost:3000  # para desarrollo
