--- a/package.json
+++ b/package.json
@@ -5,22 +5,26 @@
   "type": "module",
   "scripts": {
     "start": "cd backend && npm start",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd backend && npm run dev",
-    "dev:client": "cd docs && vite",
-    "build": "cd docs && vite build",
-    "preview": "cd docs && vite preview"
+    "dev:client": "cd frontend && vite",
+    "build": "cd frontend && vite build",
+    "preview": "cd frontend && vite preview",
+    "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install"
   },
   "dependencies": {
+    "concurrently": "^8.2.2",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "firebase": "^10.14.1",
-    "firebase-admin": "^12.0.0",
-    "leaflet": "^1.9.4"
+    "express": "^4.21.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
     "vite": "^5.4.11"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   }
 }
