Problema en el firebase-config.js, try 25

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,11 @@
 # Server Configuration
 PORT=3000
+NODE_ENV=development
 CORS_ORIGIN=http://localhost:5173
 
 # API Keys
-API_KEY=your_numlookup_api_key_here
+NUMLOOKUP_API_KEY=your_api_key_here
 
-# Firebase Admin
-FIREBASE_SERVICE_ACCOUNT={"type": "service_account", "project_id": "your_project_id", ...}
+# Firebase Configuration
+# Base64 encoded service account key
+FIREBASE_SERVICE_ACCOUNT=your_base64_encoded_service_account_here
