--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "number-home-backend",
+  "name": "numberhome-backend",
   "version": "1.0.0",
-  "private": true,
+  "description": "Backend for NumberHome - Phone Number Validation Service",
   "type": "module",
+  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "firebase-admin": "^12.0.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "firebase-admin": "^13.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.0.1"
   }
 }
