--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,13 @@
   "description": "Backend for NumberHome - Phone Number Validation Service",
   "type": "module",
   "main": "src/server.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -14,7 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^13.0.1"
+    "firebase-admin": "^11.11.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
