--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,8 @@
   },
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "build": "npm install",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --experimental-modules src/server.js",
+    "build": "npm install"
   },
   "dependencies": {
     "axios": "^1.6.2",
