--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,25 @@
 {
   "name": "numberhome-backend",
   "version": "1.0.0",
-  "description": "Backend for NumberHome - Phone Number Validation Service",
   "type": "module",
+  "description": "Backend for NumberHome phone validation service",
   "main": "src/server.js",
-  "engines": {
-    "node": ">=18.0.0"
-  },
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon --experimental-modules src/server.js",
-    "build": "npm install"
+    "dev": "nodemon src/server.js",
+    "build": "echo 'No build step required'"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.1"
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
   }
 }
