--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "numberhome-backend",
+  "name": "numbers-home-backend",
   "version": "1.0.0",
   "type": "module",
+  "private": true,
   "description": "Backend for NumberHome phone validation service",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "build": "echo 'No build step required'"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
